test/functional/failtests/opOverloadNested.txt
SyntaxError: Unexpected token "operator", expected "identifier"
1 | func main() {
2 |     operator (int:x + int:y) int {
  |            ^ (2:12)
3 |         return x / y;

